[gd_scene load_steps=4 format=2]

[ext_resource path="res://Items/Boomerang/boomerang.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Projectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Boomerang/Boomerang.gd" type="Script" id=3]

[node name="Boomerang" instance=ExtResource( 2 )]
linear_damp = 0.25
script = ExtResource( 3 )
speed = 18
damage = 3

[node name="SelfDestroyTimer" parent="." index="2"]
wait_time = 25.0

[node name="MeshInstance" parent="." index="3"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 1 )

[node name="HomingStart" parent="." index="5"]
wait_time = 0.75

[connection signal="timeout" from="HomingStart" to="." method="_on_HomingStart_timeout"]
